# cockpit

./: .gitignore  Makefile.am  bower.json  package.json
examples/vms/static/: vms.html
pkg/base1/: Makefile.am  redux.js  require-config.js
pkg/kubernetes/views/: add-user-dialog.html
pkg/ovirt/: configFuncs.es6
pkg/vms/: Makefile.am  _index.js  actions.es6  actions.jsx  app.css  app.es6  app.jsx  dashboard.jsx  helpers.es6  hostvmslist.es6  hostvmslist.jsx  index.es6  index.html  index.jsx  libvirt.es6  machined.es6  manifest.json  middlewares.es6  middlewares.jsx  reducers.es6  reducers.jsx  selectors.es6  services.es6  store.es6  store.jsx  vmdetail.es6
test/verify/: check-machines
tools/: jshint.conf
